--- a/Westeros/New Group/HouseDetailViewController.xib
+++ b/Westeros/New Group/HouseDetailViewController.xib
@@ -12,7 +12,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HouseDetailViewController" customModule="Westeros" customModuleProvider="target">
             <connections>
+                <outlet property="houseNameLabel" destination="QsR-Er-LjQ" id="0mV-BX-D5l"/>
+                <outlet property="sigilImageView" destination="6En-Tt-oQj" id="Foo-r3-AE4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="wordsLabel" destination="bYm-S1-IIU" id="Xi5-qv-oYW"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -28,7 +31,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6En-Tt-oQj">
-                    <rect key="frame" x="30" y="171" width="294" height="267"/>
+                    <rect key="frame" x="30" y="171" width="321" height="267"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYm-S1-IIU">
